pinned versions of all packages installed for testing

--- a/test_plone52.cfg
+++ b/test_plone52.cfg
@@ -8,4 +8,14 @@ extends =
 update-versions-file = test_plone52.cfg
 
 [versions]
+SecretStorage = 3.1.2
+collective.recipe.vscode = 0.1.6
+createcoverage = 1.5
+cryptography = 3.1.1
+jeepney = 0.4.3
+keyring = 21.4.0
+pathtools = 0.1.2
 plone.testing = 7.0.1
+prompt-toolkit = 1.0.18
+watchdog = 0.10.3
+wcwidth = 0.2.5
